--- a/thule-ui/src/main/webapp/src/index.html
+++ b/thule-ui/src/main/webapp/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>EducationManagementWebApp</title>
-  <base href="/">
+  <base href="/thule-ui">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
